<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nitishkumar.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coffee3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/Username"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/topping_heading"
            android:background="#e2e5ad"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/whipped_Cream_Check_Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:text="@string/topping1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_Check_Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:text="@string/toppin2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_of_coffee"
            android:textStyle="bold"
            android:background="#e2e5fd"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/value_of_quantity"
                android:textColor="#12a5fd"
                android:textSize="32sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/price_heading"
            android:textAllCaps="true"
            android:background="#e2e5cd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/price_value"
            android:background="#e2fcda"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#1ea10d" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:onClick="submitOrder"
            android:layout_gravity="center_horizontal"
            android:text="@string/order_button" />
    </LinearLayout>
</LinearLayout>